# ip2region

./: .gitattributes  .gitignore  .gitmodules  CHANGES.md  Cargo.toml  LICENSE.md  README.md  README_CN.md  README_en.md  README_zh.md  ReadMe.md  example_usage.py  patch_override.py  requirements.txt
binding/: Ip2Region.e  rust.md
binding/LabVIEW/: BinarySearch.vi  Open.vi  ip2region.ctl  readme.md
binding/c/: CMakeLists.txt  Makefile  README.md  README_zh.md  ReadMe.md  ip2region.c  ip2region.h  main.c  testSearcher.c  test_util  test_util.c  util_test.c  xdb_api.h  xdb_searcher.c  xdb_searcher.h  xdb_util.c
binding/c#/: README.md
binding/c_mmap/: ip2region.c  ip2region.h  testSearcher.c
binding/cangjie/: .gitignore  README.md  cjpm.toml
binding/clua/: Ip2region.c
binding/cpp/: Makefile  README.md  README_zh.md  readme.md  xdb_bench.cc  xdb_bench.h  xdb_bench_test.cc  xdb_search.cc  xdb_search.h  xdb_search_test.cc
binding/csharp/: .editorconfig  .gitignore  CHANGELOG.md  IP2Region.Net.slnx  IP2Region.sln  README.md  ReadMe.md
binding/erlang/: Makefile  README.md  README_zh.md  rebar.config
binding/golang/: Makefile  README.md  README_zh.md  ReadMe.md  go.mod  go.sum  ip2Region.go  ip2Region_test.go  main.go
binding/java/: README.md  README_zh.md  ReadMe.md  build.xml  pom.xml
binding/javascript/: README.md  README_zh.md  ReadMe.md  header.js  index.d.ts  index.js  ip2region.js  package-lock.json  package.json  searcher.js  tsconfig.json  util.js  version.js
binding/lua/: Ip2region.lua  README.md  README_zh.md  ReadMe.md  bench_test.lua  search_test.lua  testSearch.lua  testSearcher.lua  util_test.lua  xdb_searcher.lua
binding/lua_c/: Ip2region.c  Makefile  README.md  README_zh.md  ReadMe.md  bench_test.lua  lua_ip2region.c  search_test.lua  testSearcher.lua  util_test.lua  xdb_searcher.c
binding/nginx/: Dockerfile  LICENSE  README.md  README_zh.md  config  ngx_ip2region.h  ngx_ip2region_module.c
binding/ngx-ip2region/: README.md  ngx_ip2region.h
binding/nodejs/: .eslintrc.js  .gitignore  .mocharc.json  .nycrc.json  .prettierrc  README.md  ReadMe.md  deploy.sh  index.js  ip2region.js  ip2region.spec.js  package-lock.json  package.json  test.js
binding/php/: Ip2Region.class.php  README.md  README_zh.md  ReadMe.md  XdbSearcher.class.php  batch_test.php  bench_test.php  search_test.php  testSeacher.php  testSearcher.php  testSearcher_immediate.php  util_test.php
binding/php5_ext/: CREDITS  README.md  ReadMe.md  config.m4  ip2region.c  ip2region.php
binding/php7_ext/: README.md  ReadMe.md  ip2region.c  php_ip2region.h
binding/python/: .gitignore  MANIFEST.in  README.md  README_zh.md  ReadMe.md  beachmark.py  bench_test.py  benchmark.py  ip2Region.py  iptest.py  search_test.py  setup.py  testSearcher.py  util_test.py  xdbSearcher.py
binding/python3/: ip2Region.py  testSearcher.py
binding/ruby/: ip_2_region.rb  ip_2_region_test.rb
binding/rust/: Cargo.toml  Makefile  README.md  README_zh.md  ReadMe.md  readme.md
binding/rust/example/: Cargo.toml
binding/rust/example/src/: cmd.rs  main.rs
binding/rust/ip2region/: Cargo.toml
binding/rust/ip2region/benches/: search.rs
binding/rust/ip2region/src/: error.rs  header.rs  ip_value.rs  lib.rs  searcher.rs
binding/rust/xdb/xdb/: Cargo.toml
binding/rust/xdb/xdb/benches/: search.rs
binding/rust/xdb/xdb/src/: lib.rs
binding/rust/xdb_parse/: .gitignore  Cargo.toml  README.md
binding/rust/xdb_parse/benches/: search.rs
binding/rust/xdb_parse/examples/: search_ip.rs
binding/rust/xdb_parse/src/: error.rs  lib.rs  utils.rs  xdb.rs
binding/typescript/: README.md  ReadMe.md  package.json  tsconfig.json
data/: ip.test.txt  ip2region.db  ip2region_v6.xdb  ipv6_source.txt  segments.tests  segments.tests.mixed
doc/: source-data-upgrade.md
maker/rust/maker/: Cargo.toml
maker/rust/maker/src/: command.rs  error.rs  header.rs  ip_value.rs  lib.rs  main.rs  maker.rs  segment.rs
src/: lazy.rs  lib.rs  main.rs
tool/: cn.txt  inner.txt  readline.py
v1.0/: Cargo.toml
(+465 files in other folders)
