[package]
name = "maker"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"
bytes = "1"
num-derive = "0.4.2"
num-traits = "0.2.19"
chrono = "0.4"
itertools = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
